--- a/program.html
+++ b/program.html
@@ -30,6 +30,7 @@
     <!-- Program selection section -->
     <div class="program-content" id="program-selection">
         <h3>Select Programs</h3>
+        <!-- Indoor Soccer -->
         <div class="sport-option">
             <div class="sport-header">
                 <input type="checkbox" id="indoor-soccer" name="programs" value="Indoor Soccer">
@@ -54,54 +55,145 @@
                 </div>
             </div>
         </div>
+
+        <!-- Outdoor Soccer -->
         <div class="sport-option">
             <div class="sport-header">
                 <input type="checkbox" id="outdoor-soccer" name="programs" value="Outdoor Soccer">
                 <span class="sport-title">Outdoor Soccer</span>
             </div>
             <div class="sport-details">
-                <p>Details about Outdoor Soccer...</p>
+                <div class="text-content">
+                    <div class="timeline"><strong>March - May and August - October</strong></div>
+                    <div class="age-group"><strong>2010s and younger</strong></div>
+                    <div class="schedule"><strong>Mon/Tue/Sat/Sun Evenings</strong></div>
+                    <ul>
+                        <li>Professional, licensed coaches</li>
+                        <li>Emphasis on tactical understanding and game intelligence</li>
+                        <li>Competitive matches through US Club Soccer</li>
+                        <li>Position-specific training</li>
+                        <li>Focus on building complete players</li>
+                    </ul>
+                    <div class="location"><strong>Location: <a href="https://www.google.com/maps/search/?api=1&query=425+Mills+Park+Dr,+Cary,+NC+27519" target="_blank">Mills Park</a> and <a href="https://www.google.com/maps/search/?api=1&query=511+Scott+King+Rd,+Durham,+NC+27713" target="_blank">CM Herndon Park</a></strong></div>
+                </div>
                 <div class="image-container">
-                    <img src="images/OUTDOORSOCCER.png" alt="Outdoor Soccer">
+                    <img src="images/CPR.png" alt="Cary Parks">
+                    <img src="images/DPR.png" alt="Durham Parks">
+                    <img src="images/USCLUBSOCCER.webp" alt="US Club Soccer">
                 </div>
             </div>
         </div>
+
+        <!-- Judo -->
         <div class="sport-option">
             <div class="sport-header">
                 <input type="checkbox" id="judo" name="programs" value="Judo">
                 <span class="sport-title">Judo</span>
             </div>
             <div class="sport-details">
-                <p>Details about Judo...</p>
+                <div class="text-content">
+                    <div class="timeline"><strong>October - February and May - August</strong></div>
+                    <div class="age-group"><strong>2010s and younger</strong></div>
+                    <div class="schedule"><strong>Wed/Fri 5PM</strong></div>
+                    <ul>
+                        <li>Professional, licensed coaches</li>
+                        <li>Led by experienced black belt instructors</li>
+                        <li>Develops balance, coordination, and mental discipline</li>
+                        <li>Used by top clubs like Ajax for youth training</li>
+                        <li>Enhances physical and mental resilience</li>
+                        <li>Builds confidence and self-defense skills</li>
+                    </ul>
+                    <div class="location"><strong>Location: <a href="https://www.google.com/maps/search/?api=1&query=5563+Western+Blvd,+Suite+12,+Raleigh,+NC+27606" target="_blank">Cary Judo Club</a></strong></div>
+                </div>
                 <div class="image-container">
-                    <img src="images/JUDO.png" alt="Judo">
+                    <img src="images/CARYJUDOCLUB.png" alt="Judo">
                 </div>
             </div>
         </div>
+
+        <!-- Flag Football -->
         <div class="sport-option">
             <div class="sport-header">
                 <input type="checkbox" id="flag-football" name="programs" value="Flag Football">
                 <span class="sport-title">Flag Football</span>
             </div>
             <div class="sport-details">
-                <p>Details about Flag Football...</p>
+                <div class="text-content">
+                    <div class="timeline"><strong>March - May and August - October</strong></div>
+                    <div class="age-group"><strong>2010s and younger</strong></div>
+                    <div class="schedule"><strong>Wed/Sat 4-6PM</strong></div>
+                    <div class="coaches"><strong>Professional, licensed coaches</strong></div>
+                    <ul>
+                        <li>Non-contact skill development</li>
+                        <li>Focus on agility and strategic thinking</li>
+                        <li>Great for developing overall athleticism</li>
+                        <li>Teaches field awareness and spatial recognition</li>
+                        <li>Enhances creative thinking for set pieces in soccer</li>
+                        <li>Fun way to cross-train</li>
+                    </ul>
+                    <div class="location"><strong>Location: <a href="https://www.google.com/maps/search/?api=1&query=1016+Investment+Blvd" target="_blank">XLSW Apex</a></strong></div>
+                </div>
                 <div class="image-container">
-                    <img src="images/FLAGFOOTBALL.png" alt="Flag Football">
+                    <img src="images/XLSWAPEX.png" alt="Flag Football">
                 </div>
             </div>
         </div>
+
+        <!-- Small Group Training -->
         <div class="sport-option">
             <div class="sport-header">
                 <input type="checkbox" id="small-group" name="programs" value="Small Group Training">
                 <span class="sport-title">Small Group Training</span>
             </div>
             <div class="sport-details">
-                <p>Details about Small Group Training...</p>
+                <div class="text-content">
+                    <div class="timeline"><strong>Year-round</strong></div>
+                    <div class="age-group"><strong>2010s and younger</strong></div>
+                    <div class="schedule"><strong>Flexible scheduling</strong></div>
+                    <ul>
+                        <li>Professional, licensed coaches</li>
+                        <li>Maximum 4 players per coach</li>
+                        <li>Personalized attention and feedback</li>
+                        <li>Focused skill development</li>
+                        <li>Custom training plans based on player needs</li>
+                    </ul>
+                    <div class="location"><strong>Location: <a href="https://www.google.com/maps/search/?api=1&query=1250+Ambergate+Station,+Apex,+NC+27502" target="_blank">Hunter Street Park</a>, <a href="https://www.google.com/maps/search/?api=1&query=2600+Evans+Rd,+Apex,+NC+27502" target="_blank">Apex Nature Park</a>, or <a href="https://www.google.com/maps/search/?api=1&query=1016+Investment+Blvd" target="_blank">XLSW Apex</a></strong></div>
+                </div>
                 <div class="image-container">
-                    <img src="images/SMALLGROUPTRAINING.png" alt="Small Group Training">
+                    <img src="images/XLSWAPEX.png" alt="XLSW Apex">
+                    <!-- Placeholder for Apex Parks Rec logo -->
                 </div>
             </div>
         </div>
+
+        <!-- Basketball -->
+        <div class="sport-option">
+            <div class="sport-header">
+                <input type="checkbox" name="sports" value="basketball" disabled>
+                <span class="sport-title">Basketball</span>
+            </div>
+            <div class="sport-details">
+                <p style="font-weight: bold; text-transform: uppercase;">COMING SOON</p>
+                <div class="image-container">
+                    <img src="images/USFUTSAL.png" alt="Basketball">
+                </div>
+            </div>
+        </div>
+
+        <!-- Tumbling Gymnastics -->
+        <div class="sport-option">
+            <div class="sport-header">
+                <input type="checkbox" name="sports" value="tumbling-gymnastics" disabled>
+                <span class="sport-title">Tumbling Gymnastics</span>
+            </div>
+            <div class="sport-details">
+                <p style="font-weight: bold; text-transform: uppercase;">COMING SOON</p>
+                <div class="image-container">
+                    <img src="images/USFUTSAL.png" alt="Tumbling Gymnastics">
+                </div>
+            </div>
+        </div>
+
         <button id="next-step">NEXT</button>
     </div>
 
