--- a/program.html
+++ b/program.html
@@ -84,6 +84,33 @@
             </div>
         </div>
 
+        <!-- Small Group Training -->
+        <div class="sport-option">
+            <div class="sport-header">
+                <input type="checkbox" id="small-group" name="programs" value="Small Group Training" checked disabled>
+                <span class="sport-title">Small Group Training (Required)</span>
+            </div>
+            <div class="sport-details">
+                <div class="text-content">
+                    <div class="timeline"><strong>Year-round</strong></div>
+                    <div class="age-group"><strong>2010s and younger</strong></div>
+                    <div class="schedule"><strong>Flexible scheduling</strong></div>
+                    <ul>
+                        <li>Professional, licensed coaches</li>
+                        <li>Maximum 4 players per coach</li>
+                        <li>Personalized attention and feedback</li>
+                        <li>Focused skill development</li>
+                        <li>Custom training plans based on player needs</li>
+                    </ul>
+                    <div class="location"><strong>Location: <a href="https://www.google.com/maps/search/?api=1&query=1250+Ambergate+Station,+Apex,+NC+27502" target="_blank">Hunter Street Park</a>, <a href="https://www.google.com/maps/search/?api=1&query=2600+Evans+Rd,+Apex,+NC+27502" target="_blank">Apex Nature Park</a>, or <a href="https://www.google.com/maps/search/?api=1&query=1016+Investment+Blvd" target="_blank">XLSW Apex</a></strong></div>
+                </div>
+                <div class="image-container">
+                    <img src="images/XLSWAPEX.png" alt="XLSW Apex">
+                    <!-- Placeholder for Apex Parks Rec logo -->
+                </div>
+            </div>
+        </div>
+
         <!-- Judo -->
         <div class="sport-option">
             <div class="sport-header">
@@ -135,33 +162,6 @@
                 </div>
                 <div class="image-container">
                     <img src="images/XLSWAPEX.png" alt="Flag Football">
-                </div>
-            </div>
-        </div>
-
-        <!-- Small Group Training -->
-        <div class="sport-option">
-            <div class="sport-header">
-                <input type="checkbox" id="small-group" name="programs" value="Small Group Training" checked disabled>
-                <span class="sport-title">Small Group Training (Required)</span>
-            </div>
-            <div class="sport-details">
-                <div class="text-content">
-                    <div class="timeline"><strong>Year-round</strong></div>
-                    <div class="age-group"><strong>2010s and younger</strong></div>
-                    <div class="schedule"><strong>Flexible scheduling</strong></div>
-                    <ul>
-                        <li>Professional, licensed coaches</li>
-                        <li>Maximum 4 players per coach</li>
-                        <li>Personalized attention and feedback</li>
-                        <li>Focused skill development</li>
-                        <li>Custom training plans based on player needs</li>
-                    </ul>
-                    <div class="location"><strong>Location: <a href="https://www.google.com/maps/search/?api=1&query=1250+Ambergate+Station,+Apex,+NC+27502" target="_blank">Hunter Street Park</a>, <a href="https://www.google.com/maps/search/?api=1&query=2600+Evans+Rd,+Apex,+NC+27502" target="_blank">Apex Nature Park</a>, or <a href="https://www.google.com/maps/search/?api=1&query=1016+Investment+Blvd" target="_blank">XLSW Apex</a></strong></div>
-                </div>
-                <div class="image-container">
-                    <img src="images/XLSWAPEX.png" alt="XLSW Apex">
-                    <!-- Placeholder for Apex Parks Rec logo -->
                 </div>
             </div>
         </div>
@@ -246,7 +246,6 @@
             });
 
             localStorage.setItem('selectedPrograms', JSON.stringify(selectedPrograms));
-
             document.getElementById('program-selection').style.display = 'none';
             document.getElementById('personal-info').style.display = 'block';
 
@@ -254,6 +253,7 @@
             document.getElementById('parent-name').value = playerData.parentName || '';
             document.getElementById('first-name').value = playerData.firstName || '';
             document.getElementById('last-name').value = playerData.lastName || '';
+            document.getElementById('birth-year').value = playerData.birthYear || '';
             document.getElementById('email').value = playerData.email || '';
             document.getElementById('phone').value = playerData.phone || '';
 
@@ -321,15 +321,18 @@
             alert('Information submitted successfully!');
         });
 
-        // Preload test data for HOLDEN2024
+        // Update preload data to include all fields
         const testCode = "HOLDEN2024";
         if (testCode === "HOLDEN2024") {
-            document.getElementById('parent-name').value = "Derick Hitchcock";
-            document.getElementById('first-name').value = "Holden";
-            document.getElementById('last-name').value = "Hitchcock";
-            document.getElementById('birth-year').value = "2015";
-            document.getElementById('email').value = "hitchcock.derick@gmail.com";
-            document.getElementById('phone').value = "+19194515282";
+            const preloadData = {
+                parentName: "Derick Hitchcock",
+                firstName: "Holden",
+                lastName: "Hitchcock",
+                birthYear: "2015",
+                email: "hitchcock.derick@gmail.com",
+                phone: "+19194515282"
+            };
+            localStorage.setItem('playerData', JSON.stringify(preloadData));
         }
     </script>
 </body>
