--- a/program.html
+++ b/program.html
@@ -254,10 +254,9 @@
             minHeight: 200.00,
             minWidth: 200.00,
             scale: 1.00,
-            color1: 0x0,
-            color2: 0x0,
-            size: 1.50,
+            size: 3.00,
             speed: 1.00,
+            color: 0x0,
             backgroundColor: 0x0
         });
 
@@ -294,7 +293,8 @@
 
             selectedPrograms.forEach(program => {
                 if (program === "Indoor Soccer" || program === "Outdoor Soccer") {
-                    const days = birthYear <= 2014 ? ['Tuesday', 'Saturday'] : ['Monday', 'Sunday'];
+                    // For 2015 birth year, should get Tuesday/Saturday
+                    const days = birthYear >= 2015 ? ['Tuesday', 'Saturday'] : ['Monday', 'Sunday'];
                     programDays.innerHTML += `
                         <div class="program-days-selection">
                             <h4>${program}</h4>
@@ -303,6 +303,24 @@
                                     <input type="checkbox" checked disabled> ${day}
                                 </label>
                             `).join('')}
+                        </div>`;
+                }
+                if (program === "Small Group Training") {
+                    programDays.innerHTML += `
+                        <div class="program-days-selection">
+                            <h4>Small Group Training Locations</h4>
+                            <label><input type="checkbox"> Hunter Street Park</label>
+                            <label><input type="checkbox"> Apex Nature Park</label>
+                            <label><input type="checkbox"> XLSW Apex</label>
+                            
+                            <h4>Available Days</h4>
+                            <label><input type="checkbox"> Monday</label>
+                            <label><input type="checkbox"> Tuesday</label>
+                            <label><input type="checkbox"> Wednesday</label>
+                            <label><input type="checkbox"> Thursday</label>
+                            <label><input type="checkbox"> Friday</label>
+                            <label><input type="checkbox"> Saturday</label>
+                            <label><input type="checkbox"> Sunday</label>
                         </div>`;
                 }
             });
