Match vanta background settings with about page

--- a/about.html
+++ b/about.html
@@ -149,10 +149,10 @@
                 minHeight: 200.00,
                 minWidth: 200.00,
                 scale: 1.00,
-                color1: 0x045034,
-                color2: 0x109963,
-                size: 0.20,
-                speed: 0.00,
+                size: 3.00,
+                speed: 1.00,
+                color: 0x0,
+                backgroundColor: 0x0
             });
 
             document.getElementById('logo-container').addEventListener('click', function(e) {
