--- a/program.html
+++ b/program.html
@@ -196,7 +196,8 @@
         <form id="player-info-form">
             <h3>Player Information</h3>
             
-            <div class="form-row">
+            <!-- Parent section -->
+            <div class="form-row parent-section">
                 <div class="form-group">
                     <label for="parent-first-name">Parent First Name:</label>
                     <input type="text" id="parent-first-name" name="parent-first-name" required>
@@ -205,6 +206,7 @@
                     <label for="parent-last-name">Parent Last Name:</label>
                     <input type="text" id="parent-last-name" name="parent-last-name" required>
                 </div>
+                <button type="button" class="add-parent-button" title="Add Parent/Guardian">+</button>
             </div>
 
             <button type="button" id="add-parent">Add Another Parent/Guardian</button>
@@ -254,10 +256,10 @@
             minHeight: 200.00,
             minWidth: 200.00,
             scale: 1.00,
-            size: 3.00,
-            speed: 1.00,
-            color: 0x0,
-            backgroundColor: 0x0
+            color1: 0x045034,
+            color2: 0x109963,
+            size: 0.20,
+            speed: 0.00
         });
 
         document.getElementById('build-program').addEventListener('click', function() {
@@ -308,19 +310,23 @@
                 if (program === "Small Group Training") {
                     programDays.innerHTML += `
                         <div class="program-days-selection">
-                            <h4>Small Group Training Locations</h4>
-                            <label><input type="checkbox"> Hunter Street Park</label>
-                            <label><input type="checkbox"> Apex Nature Park</label>
-                            <label><input type="checkbox"> XLSW Apex</label>
-                            
-                            <h4>Available Days</h4>
-                            <label><input type="checkbox"> Monday</label>
-                            <label><input type="checkbox"> Tuesday</label>
-                            <label><input type="checkbox"> Wednesday</label>
-                            <label><input type="checkbox"> Thursday</label>
-                            <label><input type="checkbox"> Friday</label>
-                            <label><input type="checkbox"> Saturday</label>
-                            <label><input type="checkbox"> Sunday</label>
+                            <h4>Small Group Training</h4>
+                            <div class="location-options">
+                                <h4>Locations</h4>
+                                <label><input type="checkbox"> Hunter Street Park</label>
+                                <label><input type="checkbox"> Apex Nature Park</label>
+                                <label><input type="checkbox"> XLSW Apex</label>
+                            </div>
+                            <div class="day-options">
+                                <h4>Available Days</h4>
+                                <label><input type="checkbox"> Monday</label>
+                                <label><input type="checkbox"> Tuesday</label>
+                                <label><input type="checkbox"> Wednesday</label>
+                                <label><input type="checkbox"> Thursday</label>
+                                <label><input type="checkbox"> Friday</label>
+                                <label><input type="checkbox"> Saturday</label>
+                                <label><input type="checkbox"> Sunday</label>
+                            </div>
                         </div>`;
                 }
             });
